# toolchain

./: README.md  WRITE_ACCESS_PROBE.md
.github/workflows/: esm-experiments.yml  esm-validation.yml  qt6-debian13-release.yml  release-upload-probe.yml  ultrarender-build-log-debug.yml  ultrarender-debian13-release.yml  ultrarender-dev-sdk.yml  ultrarender-main-release-verify.yml  ultrarender-restore-log-debug.yml  ultrarender-shellcheck-debug.yml  ultrarender-status.yml  verify-ultrarender-restore-command.yml  verify-ultrarenderstudio-bundle-vault.yml
bundles/UltraRenderStudio/production-bootstrap-v1/: README.md  UltraRenderStudio-production-bootstrap-v1.bundle.sha256  VERIFIED.txt  restore.sh
bundles/UltraRenderStudio/production-bootstrap-v1/encoded/: SHA256SUMS  part-000  part-001  part-002  part-003  part-004  part-005  part-006  part-007  part-008
bundles/UltraRenderStudio/production-bootstrap-v1/segments/: part-000-00
bundles/UltraRenderStudio/production-bootstrap-v1/segments-v2/: part-000-00  part-000-01  part-000-02  part-000-03
docs/: RECOVERY.md
docs/superpowers/plans/: 2026-07-14-qt6-debian13-release-implementation.md  2026-07-20-ultrarender-sdk-release-implementation.md
docs/superpowers/specs/: 2026-07-14-qt6-debian13-release-design.md  2026-07-20-ultrarender-sdk-release-design.md
docs/ultrarender/: PERSISTENT_ENGINEERING_BASELINE.md  PRODUCTION_BOOTSTRAP_V1_1.md
esm-validation/: corpus_split.rs  latest.part00  latest.part01  latest.part02  latest.part03  latest.part04  latest.part05  latest.part06  model_invariants.rs  patch64.part00  patch64.part01  run-experiment-shard.sh  run-validation.sh  source.part00  source.part01  source.part02  source.part03  source.part04  source.part05  source.part06
manifests/: qt6-debian13-packages.txt
profiles/ultrarender/: README.md  VERSION  packages.txt
profiles/ultrarender/scripts/: build-offline-repo.sh  install-offline.sh  package-release.sh  restore.sh  verify-installed.sh
profiles/ultrarender/smoke/: CMakeLists.txt  main.cpp
scripts/: build-offline-repo.sh  install-offline.sh  package-release.sh  verify-installed.sh
scripts/lib/: common.sh
smoke/: CMakeLists.txt
smoke/qml/: Main.qml  Quick3DScene.qml
smoke/src/: main.cpp  smoke_test.cpp  widget_window.cpp  widget_window.h
(+1 files in other folders)
